[gd_scene load_steps=3 format=3 uid="uid://c66ebqguifkyj"]

[ext_resource type="Script" uid="uid://rsq7btiyq6cp" path="res://ui/grid_info_panel/grid_info_panel.gd" id="1_w7w01"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_86d6f"]

[node name="GridInfoPanel" type="Control"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w7w01")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_86d6f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="LabelsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemCountLabel" type="Label" parent="MarginContainer/HBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Items in grid:"

[node name="ValuesContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemCountValue" type="Label" parent="MarginContainer/HBoxContainer/ValuesContainer"]
layout_mode = 2
text = "0"

[node name="LoadingLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Loading..."
